[develop]
script_dir=$base/lib/nvidia_monitor
[install]
install_scripts=$base/lib/nvidia_monitor
[metadata]
name = nvidia_monitor
version = 0.1.0
maintainer = Tony Baltovski
maintainer_email = tony@example.com
description = ROS 2 node that publishes NVIDIA GPU telemetry as diagnostic messages.
license = Apache-2.0
[options]
packages = nvidia_monitor
install_requires = setuptools
zip_safe = True
[options.extras_require]
test = pytest
[options.data_files]
share/ament_index/resource_index/packages = resource/nvidia_monitor
share/nvidia_monitor = package.xml
share/nvidia_monitor/launch = launch/nvidia_monitor.launch.py
[options.entry_points]
console_scripts =
    nvidia_monitor = nvidia_monitor.nvidia_monitor_node:main
[tool:pytest]
testpaths = test
[flake8]
max-line-length = 99
